2001-02-12  JP Rosevear  <jpr@ximian.com>

	* src/test/Makefile.am: link with the static versions

	* src/python/Makefile.am: use include dir discovered in configure checks

	* src/python/.cvsignore: shush

	* src/libical/icalrestriction.c: remove autogenerated file
	
	* src/libical/Makefile.am: the generated files are now disted so
	look for them in the source dir rather than the build dir

	* src/Makefile.am: Only build the python dir if all the configure
	stuff checked out

	* configure.in: Remove shared library disabling and add a python
	check and allow for the python bindings to not be built

2001-02-11  Eric Busboom  <eric@softwarestudio.org>

	* src/python/Makefile.am Tweaked makefile to use automake more,
 	but it stil isn't quie right.

2001-02-09  JP Rosevear  <jpr@ximian.com>

	* Shush cvs
	
2001-02-09  JP Rosevear  <jpr@ximian.com>

	* src/libical/Makefile.am: Slightly over zealous during the merge
	
2001-02-09  JP Rosevear  <jpr@ximian.com>

	* src/libical/Makefile.am: Correct typo

	* Removal of more auto generated files
	
2001-02-09  JP Rosevear  <jpr@ximian.com>

	* Removal of various auto generated files
	
2001-02-09  JP Rosevear  <jpr@ximian.com>

	* src/libical/icalparameter.c.in (icalparameter_new_from_string):
	its NEEDS-ACTION rather than NEEDSACTION
	(icalparameter_as_ical_string): ditto

2001-02-09  Eric Busboom  <eric@softwarestudio.org>

	* python Added src/python directory. Inserted SWIG wrapper files,
 	and a simple interface to Component, Time, Duration, Period and
 	Store.

	* icallangbind.c More experimental work

	* icalduration.{c,h}, icalperiod.{c,h} Broke out period and
 	duration types into their own files

2001-02-06  Christopher James Lahey  <clahey@ximian.com>

	* src/libical/icallangbind.c: Added a missing #include here.

	* src/libical/icalrecur.c (icalrecur_add_bydayrules): Copy the
	passed in const vals since we change it.
	
2001-02-06  Eric Busboom  <eric@softwarestudio.org>
